# lib/api-spec/openapi.yaml
@@ -1342,6 +1342,22 @@ components:
           type: string
         nome:
           type: string
+        cpf:
+          type: ["string", "null"]
+        percentual:
+          type: ["number", "null"]
+        valorQuotas:
+          type: ["number", "null"]
+        cargo:
+          type: ["string", "null"]
+        decisor:
+          type: ["boolean", "null"]
+        email:
+          type: ["string", "null"]
+        whatsapp:
+          type: ["string", "null"]
+        origem:
+          type: ["string", "null"]
         qualificacao:
           type: ["string", "null"]
         qualId:
@@ -1364,6 +1380,20 @@ components:
       properties:
         nome:
           type: string
+        cpf:
+          type: ["string", "null"]
+        percentual:
+          type: ["number", "null"]
+        valorQuotas:
+          type: ["number", "null"]
+        cargo:
+          type: ["string", "null"]
+        decisor:
+          type: ["boolean", "null"]
+        email:
+          type: ["string", "null"]
+        whatsapp:
+          type: ["string", "null"]
         qualificacao:
           type: ["string", "null"]
         qualId:
@@ -1377,6 +1407,20 @@ components:
       type: object
       properties:
         nome:
+          type: ["string", "null"]
+        cpf:
+          type: ["string", "null"]
+        percentual:
+          type: ["number", "null"]
+        valorQuotas:
+          type: ["number", "null"]
+        cargo:
+          type: ["string", "null"]
+        decisor:
+          type: ["boolean", "null"]
+        email:
+          type: ["string", "null"]
+        whatsapp:
           type: ["string", "null"]
         qualificacao:
           type: ["string", "null"]
